settings: Fix spacing between folder name and description inputs.
Previously, there was no space between channel folder name and
description inputs in channel folder creation and edit modals.

--- a/web/styles/subscriptions.css
+++ b/web/styles/subscriptions.css
@@ -130,7 +130,8 @@
     color: hsl(0deg 100% 50%);
 }
 
-.change-stream-name-container {
+.change-stream-name-container,
+.channel-folder-name-container {
     margin-bottom: 20px;
 }
 
